Create listView and item (HomePage)

--- a/paws4adoption_mobile/app/src/main/res/values/strings.xml
+++ b/paws4adoption_mobile/app/src/main/res/values/strings.xml
@@ -12,6 +12,10 @@
     <string name="district4">Distrito 4</string>
     <string name="district5">Distrito 5</string>
     <string name="district6">Distrito 6</string>
+    <string name="type_animal">Tipo de animal</string>
+    <string name="name_animal">Nome</string>
+    <string name="size_animal">Porte</string>
+    <string name="todo">TODO</string>
     <string-array name="districtslist">
         <item>@string/escolher_distrito</item>
         <item>@string/district1</item>
@@ -21,4 +25,6 @@
         <item>@string/district5</item>
         <item>@string/district6</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
