PROJ-142 [Mobile] [View] Login

--- a/paws4adoption_mobile/app/src/main/res/values/strings.xml
+++ b/paws4adoption_mobile/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="insertEmail">Introduza o email</string>
+    <string name="insertPassword">Introduza a password</string>
+    <string name="login">Login</string>
 </resources>
